Fix asset security having some issues